--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ca2ba27b",
+   "id": "225e92f8",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5828a1e0",
+   "id": "7d6aab6a",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "206dc1a7",
+   "id": "4775f3b9",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8929250",
+   "id": "2e593ca1",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0df5f5e1",
+   "id": "2e5e937b",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86f80b37",
+   "id": "3ab80416",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebb0a184",
+   "id": "e4480c70",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "20b7f574",
+   "id": "6f451a71",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "131c2154",
+   "id": "1320f45d",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "03742d67",
+   "id": "98ef054b",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d4b30b6e",
+   "id": "5221725b",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "de0ad8ab",
+   "id": "057ec6e1",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "83f2f7d7",
+   "id": "b5701e4e",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dd142934",
+   "id": "c92a4f0f",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1656e831",
+   "id": "feb45067",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "63ec6d43",
+   "id": "666c4a89",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b0c6c34",
+   "id": "df20ce5a",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "be33f3e2",
+   "id": "33b55ba1",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "564df87b",
+   "id": "6715b641",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a645448",
+   "id": "f19c88e6",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bac300a3",
+   "id": "723ba122",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "90cfc58e",
+   "id": "a2a44276",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8f6d4040",
+   "id": "2838074f",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b66e144c",
+   "id": "253cdf3e",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d940803f",
+   "id": "ee73f278",
    "metadata": {},
    "source": [
     "# To use Markdown mode\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ccad45a9",
+   "id": "bde7f523",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebed80b6",
+   "id": "db944217",
    "metadata": {},
    "source": [
     "# Exercise: Greet yourself\n",
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "196bf8ad",
+   "id": "f2c617a3",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "260bbda0",
+   "id": "ff3ba1a5",
    "metadata": {},
    "source": [
     "# Getting input from the user\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "db2cc338",
+   "id": "275a9d39",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "66f7cddf",
+   "id": "f0ac5d70",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ae7d42e9",
+   "id": "0f3c98ea",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "39798dce",
+   "id": "7067f845",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f7ee074",
+   "id": "62b44642",
    "metadata": {},
    "source": [
     "# Exercise: Multi-part greeting\n",
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "85d9a225",
+   "id": "0e82d743",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d8d5d95",
+   "id": "ad64f275",
    "metadata": {},
    "source": [
     "# f-strings\n",
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "dbb54530",
+   "id": "fb272d46",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7f90d4f6",
+   "id": "3d1b2f88",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9690ebe9",
+   "id": "20519bb0",
    "metadata": {},
    "source": [
     "# Comparing values\n",
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8bc0c45d",
+   "id": "9867d12d",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9c6c453a",
+   "id": "a226aa82",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "df6b898d",
+   "id": "996d1788",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d1391e7d",
+   "id": "8b4484d0",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "11a61060",
+   "id": "f2932986",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f91c3e0a",
+   "id": "386de746",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7703addf",
+   "id": "886b8a2b",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f54a2716",
+   "id": "67ad5ef8",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16df9a53",
+   "id": "28f60676",
    "metadata": {},
    "source": [
     "# Comparison operators\n",
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a8b1b916",
+   "id": "4e511376",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a72c5af0",
+   "id": "3674afca",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "70243fa0",
+   "id": "a6380b8e",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d9a86ba0",
+   "id": "2ae4229f",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "959af5ff",
+   "id": "96c0f680",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eacb6b1",
+   "id": "9460d5a8",
    "metadata": {},
    "source": [
     "# Conditional execution\n",
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "01aa1ef6",
+   "id": "6074eda2",
    "metadata": {},
    "outputs": [
     {
@@ -1153,9 +1153,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aaf9f78b",
+   "metadata": {},
+   "source": [
+    "# Next up\n",
+    "\n",
+    "1. More possibilities (with `elif`)\n",
+    "2. More possibilities (with `and`, `or`, and `not`)\n",
+    "3. Numbers (integers and floats)\n",
+    "\n",
+    "Resume at :45"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c6eb9dd",
+   "id": "12b025cb",
    "metadata": {},
    "outputs": [],
    "source": []
