--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1bd59683",
+   "id": "0ccdbeb2",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2ef5568c",
+   "id": "eb94331e",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b9210360",
+   "id": "a5fab79a",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "613c1ab7",
+   "id": "868c652d",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "446590a3",
+   "id": "cce608d2",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "da22ded8",
+   "id": "47bfa0ed",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "18cd9215",
+   "id": "f22c1cff",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94b5b935",
+   "id": "2cebabd1",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3224aefa",
+   "id": "1f567b64",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "48691c0b",
+   "id": "a51b6bb9",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4723d78f",
+   "id": "8d32f52e",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c343575c",
+   "id": "a8ca2a61",
    "metadata": {},
    "outputs": [
     {
@@ -232,10 +232,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fb91460",
+   "id": "ce77e008",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = "
+   ]
   }
  ],
  "metadata": {
