--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6a1eed70",
+   "id": "472a927c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "876f9c14",
+   "id": "b3f3f30a",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1ff95f65",
+   "id": "a558465a",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c8b70c2a",
+   "id": "6611b57b",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "28e66222",
+   "id": "c9349800",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "baf7125c",
+   "id": "743cc38e",
    "metadata": {},
    "outputs": [
     {
@@ -121,10 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1c409026",
+   "execution_count": 12,
+   "id": "068f00e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Bob\n",
+      "Hello Bob!\n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"Enter your name: \")\n",
     "\n",
@@ -132,8 +141,16 @@
     "    print(\"Hello cool dude!\")\n",
     "    print(\"How are you?\")\n",
     "else:\n",
-    "    print(\"Hello\" {name} )"
+    "    print(f\"Hello {name}!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be5e5ebf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
