--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0ccdbeb2",
+   "id": "15a35b60",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eb94331e",
+   "id": "f9c54679",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a5fab79a",
+   "id": "832f28db",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "868c652d",
+   "id": "3484e735",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cce608d2",
+   "id": "1a3e6239",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "47bfa0ed",
+   "id": "2f815cfb",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f22c1cff",
+   "id": "2244df10",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cebabd1",
+   "id": "6c1764db",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1f567b64",
+   "id": "943a9a8e",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a51b6bb9",
+   "id": "a05859de",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "8d32f52e",
+   "id": "fcf73317",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a8ca2a61",
+   "id": "526694dc",
    "metadata": {},
    "outputs": [
     {
@@ -231,13 +231,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "86e4fb80",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (420356793.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[22], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    user_name == 'Jaspreet':\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_name = input('Enter your name: ')\n",
+    "\n",
+    "user_name == 'Jaspreet':\n",
+    "    print('Hi ' + user_name)\n",
+    "    print"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ce77e008",
+   "id": "480e71ef",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "name = "
-   ]
+   "source": []
   }
  ],
  "metadata": {
