--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "15a35b60",
+   "id": "1cfd5a25",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f9c54679",
+   "id": "9746e711",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "832f28db",
+   "id": "b8bcccd8",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3484e735",
+   "id": "ac2e3118",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1a3e6239",
+   "id": "4976cd91",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2f815cfb",
+   "id": "531b0080",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2244df10",
+   "id": "539e2eb3",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c1764db",
+   "id": "3e25db24",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "943a9a8e",
+   "id": "5342a064",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a05859de",
+   "id": "c88c9f96",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fcf73317",
+   "id": "c6590cda",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "526694dc",
+   "id": "663bbc70",
    "metadata": {},
    "outputs": [
     {
@@ -231,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "86e4fb80",
+   "execution_count": 23,
+   "id": "b17e9b2b",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (420356793.py, line 3)",
+     "evalue": "invalid syntax (4076315768.py, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[22], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    user_name == 'Jaspreet':\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[23], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    user_name == 'Jaspreet':\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -249,13 +249,15 @@
     "\n",
     "user_name == 'Jaspreet':\n",
     "    print('Hi ' + user_name)\n",
-    "    print"
+    "    print('How are you doing ' + '!')\n",
+    "else\n",
+    "    print(f' Hi {user_name} + Who are you')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "480e71ef",
+   "id": "96623ba4",
    "metadata": {},
    "outputs": [],
    "source": []
