--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1cfd5a25",
+   "id": "caf4ecee",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9746e711",
+   "id": "d3cc318d",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b8bcccd8",
+   "id": "4b827917",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ac2e3118",
+   "id": "61e81e1a",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4976cd91",
+   "id": "7e7d515c",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "531b0080",
+   "id": "7f21f092",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "539e2eb3",
+   "id": "980b9b6d",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e25db24",
+   "id": "a4c0c1d3",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5342a064",
+   "id": "ec9cc6d3",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c88c9f96",
+   "id": "a5cc8da1",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c6590cda",
+   "id": "127f641c",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "663bbc70",
+   "id": "4136edfa",
    "metadata": {},
    "outputs": [
     {
@@ -231,33 +231,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "b17e9b2b",
+   "execution_count": 27,
+   "id": "2a07c05b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4076315768.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[23], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    user_name == 'Jaspreet':\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Tini\n",
+      " Hi Tini + Who are you?\n"
      ]
     }
    ],
    "source": [
     "user_name = input('Enter your name: ')\n",
     "\n",
-    "user_name == 'Jaspreet':\n",
+    "if user_name == 'Jaspreet':\n",
     "    print('Hi ' + user_name)\n",
     "    print('How are you doing ' + '!')\n",
-    "else\n",
-    "    print(f' Hi {user_name} + Who are you')"
+    "else:\n",
+    "    print(f' Hi {user_name} + Who are you?')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96623ba4",
+   "id": "fbd84b57",
    "metadata": {},
    "outputs": [],
    "source": []
