--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "caf4ecee",
+   "id": "604c52aa",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d3cc318d",
+   "id": "d09433b1",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4b827917",
+   "id": "5a959465",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "61e81e1a",
+   "id": "f068a787",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7e7d515c",
+   "id": "8b7d5500",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7f21f092",
+   "id": "16c4764d",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "980b9b6d",
+   "id": "4bd4949f",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4c0c1d3",
+   "id": "3bf7ad45",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ec9cc6d3",
+   "id": "1df56e66",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a5cc8da1",
+   "id": "07e757eb",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "127f641c",
+   "id": "a9643557",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4136edfa",
+   "id": "ee36af6c",
    "metadata": {},
    "outputs": [
     {
@@ -231,8 +231,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "2a07c05b",
+   "execution_count": 29,
+   "id": "ec03de27",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
      "output_type": "stream",
      "text": [
       "Enter your name: Tini\n",
-      " Hi Tini + Who are you?\n"
+      " Hi Tini, Who are you?\n"
      ]
     }
    ],
@@ -251,13 +251,13 @@
     "    print('Hi ' + user_name)\n",
     "    print('How are you doing ' + '!')\n",
     "else:\n",
-    "    print(f' Hi {user_name} + Who are you?')"
+    "    print(f' Hi {user_name}, ' + 'Who are you?')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbd84b57",
+   "id": "fe6bb4c8",
    "metadata": {},
    "outputs": [],
    "source": []
