--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "604c52aa",
+   "id": "c6154c31",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d09433b1",
+   "id": "8663b9de",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5a959465",
+   "id": "66dae3f2",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f068a787",
+   "id": "f21cb927",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8b7d5500",
+   "id": "9b3f15b4",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "16c4764d",
+   "id": "ed5643b1",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4bd4949f",
+   "id": "2ce17c93",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bf7ad45",
+   "id": "38fbf237",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1df56e66",
+   "id": "52b74d4f",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "07e757eb",
+   "id": "24184899",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a9643557",
+   "id": "49e5c635",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ee36af6c",
+   "id": "aead64b1",
    "metadata": {},
    "outputs": [
     {
@@ -231,8 +231,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "ec03de27",
+   "execution_count": 30,
+   "id": "8867da5f",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
      "output_type": "stream",
      "text": [
       "Enter your name: Tini\n",
-      " Hi Tini, Who are you?\n"
+      " Hi, Tini. Who are you?\n"
      ]
     }
    ],
@@ -251,13 +251,13 @@
     "    print('Hi ' + user_name)\n",
     "    print('How are you doing ' + '!')\n",
     "else:\n",
-    "    print(f' Hi {user_name}, ' + 'Who are you?')"
+    "    print(f' Hi, {user_name}. Who are you?')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe6bb4c8",
+   "id": "440c9edb",
    "metadata": {},
    "outputs": [],
    "source": []
