--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "de192b3b",
+   "id": "6b8e62e7",
    "metadata": {},
    "outputs": [
     {
@@ -61,18 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "d9d62494",
+   "execution_count": 48,
+   "id": "ae9140fb",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter Name: dima\n",
-      "Enter City: krakow\n",
-      "Enter number: 5\n",
-      "Hello dima from krakow 5 times!\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Maybe you meant '==' or ':=' instead of '='? (3508099056.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[48], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    if name = Dmitrii\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n"
      ]
     }
    ],
@@ -80,13 +78,15 @@
     "name = input ('Enter Name: ')\n",
     "city = input ('Enter City: ')\n",
     "x = input ('Enter number: ')\n",
-    "print (f'Hello {name} from {city} {x} times!')"
+    "if name = Dmitrii\n",
+    "    then print (f'Hello {name} from {city} {x} times!')\n",
+    "    else print (f'Hello {name} who are you?')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "150a9187",
+   "id": "be24cbc0",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbffd5f6",
+   "id": "5ede2f3d",
    "metadata": {},
    "outputs": [],
    "source": []
