--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6b8e62e7",
+   "id": "c59921e8",
    "metadata": {},
    "outputs": [
     {
@@ -61,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "ae9140fb",
+   "execution_count": 49,
+   "id": "647262ac",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax. Maybe you meant '==' or ':=' instead of '='? (3508099056.py, line 4)",
+     "evalue": "invalid syntax (468278523.py, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[48], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    if name = Dmitrii\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[49], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    if\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -78,7 +78,8 @@
     "name = input ('Enter Name: ')\n",
     "city = input ('Enter City: ')\n",
     "x = input ('Enter number: ')\n",
-    "if name = Dmitrii\n",
+    "if \n",
+    "name = Dmitrii\n",
     "    then print (f'Hello {name} from {city} {x} times!')\n",
     "    else print (f'Hello {name} who are you?')\n"
    ]
@@ -86,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "be24cbc0",
+   "id": "d86d9e09",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ede2f3d",
+   "id": "62a90e07",
    "metadata": {},
    "outputs": [],
    "source": []
