--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -78,8 +78,7 @@
     "name = input ('Enter Name: ')\n",
     "city = input ('Enter City: ')\n",
     "x = input ('Enter number: ')\n",
-    "if \n",
-    "name = Dmitrii\n",
+    "if name = 'Dmitrii\n",
     "    then print (f'Hello {name} from {city} {x} times!')\n",
     "    else print (f'Hello {name} who are you?')\n"
    ]
