--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -61,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "id": "647262ac",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (468278523.py, line 4)",
+     "evalue": "expected ':' (786118289.py, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[49], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    if\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[54], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    if name == Dmitrii\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
      ]
     }
    ],
@@ -78,8 +78,8 @@
     "name = input ('Enter Name: ')\n",
     "city = input ('Enter City: ')\n",
     "x = input ('Enter number: ')\n",
-    "if name = 'Dmitrii\n",
-    "    then print (f'Hello {name} from {city} {x} times!')\n",
+    "if name == Dmitrii\n",
+    "    print (f'Hello {name} from {city} {x} times!')\n",
     "    else print (f'Hello {name} who are you?')\n"
    ]
   },
