--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "667c5e95",
+   "id": "a96c9db7",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a177fd1a",
+   "id": "8fc61a56",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ab73b4f2",
+   "id": "6c60a64d",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c90ceee",
+   "id": "f9f7f182",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6814f358",
+   "id": "39ae9779",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8ef7e0bf",
+   "id": "8d142dc0",
    "metadata": {},
    "outputs": [
     {
@@ -110,10 +110,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c41e7a90",
+   "id": "4724d66a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name1 = input(\"Enter first word :\")\n",
+    "name2 "
+   ]
   }
  ],
  "metadata": {
