--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -61,16 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "id": "647262ac",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "expected ':' (786118289.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[54], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    if name == Dmitrii\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Name: Dima\n",
+      "Enter City: Krakow\n",
+      "Enter number: 5\n",
+      "Hello Dima who are you?\n"
      ]
     }
    ],
@@ -78,9 +80,9 @@
     "name = input ('Enter Name: ')\n",
     "city = input ('Enter City: ')\n",
     "x = input ('Enter number: ')\n",
-    "if name == Dmitrii\n",
+    "if name == 'Dmitrii':\n",
     "    print (f'Hello {name} from {city} {x} times!')\n",
-    "    else print (f'Hello {name} who are you?')\n"
+    "else: print (f'Hello {name} who are you?')\n"
    ]
   },
   {
