--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3b86a442",
+   "id": "538fbd5d",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "203c8bf0",
+   "id": "f8be89db",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5d4ced3e",
+   "id": "f19e3e20",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "850cc2b3",
+   "id": "d9751433",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2d2bb3e3",
+   "id": "2f21f2a4",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "99eb0198",
+   "id": "8b6925a2",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a43ad79c",
+   "id": "2bdfd1a6",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d99b9401",
+   "id": "905f1a14",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f0dccb47",
+   "id": "d50bd1cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a6b13b48",
+   "id": "2dbccbf2",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b46fdecf",
+   "id": "520eaa26",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f6c7a4a6",
+   "id": "aa044ffa",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a7065dfb",
+   "id": "7d22df83",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6e48ffd3",
+   "id": "dfd75e30",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "67423270",
+   "id": "5e2124c8",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "21c916d5",
+   "id": "be663b8f",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8cc931eb",
+   "id": "a67b9b27",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "695b2fc7",
+   "id": "df22eb3a",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "77454b27",
+   "id": "9a7273f2",
    "metadata": {},
    "outputs": [
     {
@@ -372,14 +372,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "973407ff",
+   "id": "470ba012",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = input('Enter your name: ')\n",
     " \n",
     "    if name == 'Shraddha' \n",
-    "    print('Hello, Madam!')"
+    "    print('Hello, Madam!')\n",
+    "else:\n",
+    "    print(f'Hello, {name}. Who are you?\n",
+    "          ')"
    ]
   }
  ],
