--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c6154c31",
+   "id": "22956dbc",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8663b9de",
+   "id": "aab06542",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "66dae3f2",
+   "id": "ba9c3272",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f21cb927",
+   "id": "c78cddcf",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9b3f15b4",
+   "id": "16de149e",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ed5643b1",
+   "id": "abbfe669",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2ce17c93",
+   "id": "9617bf6b",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38fbf237",
+   "id": "5a60c1ef",
    "metadata": {},
    "source": [
     "#Exercise Greet Yourself\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "52b74d4f",
+   "id": "ba9b62c2",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "24184899",
+   "id": "06d67695",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "49e5c635",
+   "id": "46eb70b4",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "aead64b1",
+   "id": "d19bf6a9",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8867da5f",
+   "id": "c42d7728",
    "metadata": {},
    "outputs": [
     {
@@ -257,10 +257,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "440c9edb",
+   "id": "81bad8dc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word1 = input('Enter the w')"
+   ]
   }
  ],
  "metadata": {
