--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "deac084a",
+   "id": "f3d9027f",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "47d84085",
+   "id": "49e91a92",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c4b4ab1",
+   "id": "eb6a57c3",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8569be4",
+   "id": "0ac9cd31",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "66835db7",
+   "id": "5b0f9e20",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d6e82898",
+   "id": "1af1a11e",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8652e43b",
+   "id": "df3fcf4a",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8392be47",
+   "id": "eb2911d4",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "abda0304",
+   "id": "b59ae00b",
    "metadata": {},
    "outputs": [
     {
@@ -150,10 +150,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3619c6f",
+   "id": "96452a55",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word1 = input('Enter first word')\n",
+    "word2 = input('Enter second word')\n",
+    "if word1 > word2:\n",
+    "    print(f')"
+   ]
   }
  ],
  "metadata": {
