--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "472a927c",
+   "id": "aba1d425",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b3f3f30a",
+   "id": "f2ad9a93",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a558465a",
+   "id": "78034e80",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6611b57b",
+   "id": "d84346ab",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c9349800",
+   "id": "c42dc0e5",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "743cc38e",
+   "id": "fdc3845a",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "068f00e6",
+   "id": "0d6d10f0",
    "metadata": {},
    "outputs": [
     {
@@ -147,10 +147,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be5e5ebf",
+   "id": "58b15a8f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word1 = input(\"Enter the first word: \")\n",
+    "word2 = input(\"Enter the second word: \")\n",
+    "\n",
+    "if word1 > word2:\n",
+    "    print(f\"{word1} comes before {word2}.\")\n",
+    "else\n",
+    "    print(f\"{word2} comes before )"
+   ]
   }
  ],
  "metadata": {
