--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a96c9db7",
+   "id": "261f34cb",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8fc61a56",
+   "id": "52777e83",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6c60a64d",
+   "id": "a3441792",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9f7f182",
+   "id": "b11bc761",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "39ae9779",
+   "id": "301b7033",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8d142dc0",
+   "id": "bf2d7e8d",
    "metadata": {},
    "outputs": [
     {
@@ -110,12 +110,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4724d66a",
+   "id": "6d249d7d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name1 = input(\"Enter first word :\")\n",
-    "name2 "
+    "name1 = input(\"Enter first word : \")\n",
+    "name2 = input(\"Enter second word : \")\n",
+    "if name1 < name2 :\n",
+    "    print(f\"Word {name1} goes before {name2}\"\")\n",
+    "          else:"
    ]
   }
  ],
