--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a54ac43",
+   "id": "2ebee699",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5cebeea6",
+   "id": "079be811",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aae13d37",
+   "id": "48782c8b",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "61bb2aec",
+   "id": "9af846c4",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5a0efc2a",
+   "id": "d3ef9e03",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "429ad790",
+   "id": "b547a44c",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ed18f3f1",
+   "id": "fdb8041e",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "95d3dcad",
+   "id": "5efd78ef",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "18c2ef7d",
+   "id": "cf2ba3d6",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "87a1214e",
+   "id": "06381d4a",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "34f0bca4",
+   "id": "3ffa6e51",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ef3e06b6",
+   "id": "4dea24b1",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "65d59317",
+   "id": "1459b38f",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f270f80f",
+   "id": "26c28121",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "94b2e55c",
+   "id": "9ef22c75",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2e0bcedc",
+   "id": "1abe8f22",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbbf62e3",
+   "id": "ff47c72e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word1 = input('Enter a word: ')\n",
+    "word2 = input('Enter another word: ')\n",
+    "if word1>word2:\n",
+    "    print(word1 \"_comes first\")\n",
+    "else:\n",
+    "    print(word2 \"_comes first\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44a77caa",
    "metadata": {},
    "outputs": [],
    "source": []
